--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -1,48 +1,308 @@
-<section class="our-clients">
-    <div class="container">
-      <div class="our-client-header">
-          <h3>OUR CLIENTS</h3>
-          <div class="step-image">
-            <img src="/assets/images/sample/line.svg" />
-          </div>
-      </div>
-      <div class="our-client-body">
-          <div class="row">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-1"></div>
-              <div class="col-sm-2 client">
-                    <img src="/assets/images/our-clients/logo010.png" alt="">
-              </div>
-              <div class="col-sm-2 client">
-                    <img src="/assets/images/our-clients/logo020.png" alt="">
-              </div>
-              <div class="col-sm-2 client">
-                    <img src="/assets/images/our-clients/logo030.png" alt="">
-              </div>
-              <div class="col-sm-2 client">
-                  <img src="/assets/images/our-clients/logo040.png" alt="">
+<section class="cater">
+<div class="container">
+      <div class="row">
+            <div class="col-md-6">
+                  <h1>We cater to your needs</h1>
+                  <p>We believe ressearch brings our team of design experts connect with your business
+                        and 'dev team to build a better product
+                  </p>
             </div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-1"></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-1">
+                  <div class="v1"></div>
+            </div>
+            <div class="col-md-4">
+                  <div class="list-items">
+                    <h3><span class="image1"><img src="/assets/images/cater/icon-1.svg" alt="" /></span><span class="list">DIGITAL TRANSFORMATION</span></h3>
+                    <h3><span class="image2"><img src="/assets/images/cater/icon-2.svg" alt="" /></span><span class="list">PRODUCT DEVELOPMENT</span></h3>
+                    <h3><span class="image3"><img src="/assets/images/cater/icon-3.svg" alt="" /></span><span class="list">STARTUPS</span></h3>
+                    <h3><span class="image4"><img src="/assets/images/cater/icon-4.svg" alt="" /></span><span class="list">MOBILE APPS</span></h3>
+                    <h3><span class="image5"><img src="/assets/images/cater/icon-5.svg" alt="" /></span><span class="list">ENTERPRICE APPLICATION</span></h3>
+                    <h3><span class="image6"><img src="/assets/images/cater/icon-6.svg" alt="" /></span><span class="list">INFORMATION PORTALS</span></h3>
+                  </div>
+            </div>
+            <div class="col-md-1"></div>
+      </div>
+</div>
+</section>
+
+<section class="digital-trans">
+      <div class="container">
+            <div class="row">
+                  <div class="col-md-12">
+                        <h1>DIGITAL TRANSFORMATION</h1>
+                  </div>
             </div>
             <div class="row">
-              <div class="col-sm-1"></div>
-              <div class="col-sm-1"></div>
-              <div class="col-sm-2 client">
-                    <img src="/assets/images/our-clients/logo050.png" alt="">
-              </div>
-              <div class="col-sm-2 client">
-                    <img src="/assets/images/our-clients/logo060.png" alt="">
-              </div>
-              <div class="col-sm-2 client">
-                    <img src="/assets/images/our-clients/logo070.png" alt="">
-              </div>
-              <div class="col-sm-2 client">
-                  <img src="/assets/images/our-clients/logo080.png" alt="">
+                  <div class="col-md-5">
+                        <h2>How Digital Transformation</h2>
+                        <h2>Is Important to business</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product</p>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5">
+                        <h2>Advantages Of Digital</h2>
+                        <h2>Transformation</h2>
+                        <ul class="list">
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                        </ul>
+                  </div>
             </div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-1"></div>
+            <div class="row">
+                  <div class="col-md-5">
+                        <div class="step-image">
+                              <img src="/assets/images/services/ui-dev/fd4.png" alt="" />
+                        </div>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5">
+                        <h2>DIGITAL TRANSFORMATION</h2>
+                        <h2>SERVICES</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product
+                        </p>
+                        <div class="btn">View Casestudy</div>
+                  </div>
             </div>
       </div>
-    </div>
-  </section>
+</section>
+
+<section class="produce-dev">
+      <div class="container">
+            <div class="row">
+                  <div class="col-md-12">
+                        <h1>PRODUCT DEVELOPMENT</h1>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-md-5">
+                        <h2>PRODUCT DEVELOPMENT STRATEGY</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product
+                        </p>
+                        <h2>PRODUCT DEVELOPMENT PROCESS</h2>
+                        <ul class="list">
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                        </ul>
+                        <div class="btn">View Casestudy</div>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5">
+                        <div class="step-image">
+                              <img src="/assets/images/home/img-4.png" alt="" />
+                        </div>
+                  </div>
+            </div>
+      </div>
+</section>
+
+<section class="startups">
+      <div class="container">
+            <div class="row">
+                  <div class="col-md-12">
+                        <h1>STARTUPS</h1>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-md-5">
+                        <h2>ESTABLISH BRAND</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product</p>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5">
+                        <h2>SETUP BUSINESS STRATEGY</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product</p>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-md-5">
+                        <h2>KNOW THE RIGHT PATH</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product
+                        </p>
+                        <div class="btn">View Casestudy</div>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5">
+                        <div class="step-image">
+                              <img src="/assets/images/projects/skill-development/web-view.png">
+                        </div>
+                  </div>
+            </div>
+      </div>
+</section>
+
+<section class="mobile-apps">
+      <div class="container">
+            <div class="row">
+                  <div class="col-md-12">
+                        <h1>MOBILE APPS</h1>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-md-5">
+                        <h2>NEW ERA</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product
+                        </p>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5">
+                        <h2>INCREASE YOUR BUSINESS SALES</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product
+                        </p>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-md-5">
+                        <div class="step-image">
+                              <img src="/assets/images/cater/two.png" alt="" />
+                        </div>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5">
+                        <h2>B2B & B2C</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product
+                        </p>
+                  </div>
+            </div>
+      </div>
+</section>
+
+<section class="enterprise-app">
+      <div class="container">
+            <div class="row">
+                  <div class="col-md-12">
+                        <h1>ENTERPRICE APPLICATION</h1>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-md-5">
+                        <h2>PRODUCT DEVELOPMENT STRATEGY</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product
+                        </p>
+                        <h2>PRODUCT DEVELOPMENT PROCESS</h2>
+                        <ul class="list">
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                        </ul>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-6">
+                        <div class="step-image">
+                              <img src="/assets/images/projects/app-development/app-dev.png" alt=""/>
+                        </div>
+                  </div>
+            </div>
+      </div>
+</section>
+
+<section class="info-portals">
+      <div class="container">
+            <div class="row">
+                  <div class="col-md-12">
+                        <h1>INFORMATION PORTALS</h1>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-md-5">
+                        <h2>PRODUCT DEVELOPMENT STRATEGY</h2>
+                        <p>We believe ressearch brings our team of design experts connect with your business
+                              and 'dev team to build a better product We believe ressearch brings our team of 
+                              design experts connect with your business and 'dev team to build a better product
+                        </p>
+                        <h2>PRODUCT DEVELOPMENT PROCESS</h2>
+                        <ul class="list">
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>We believe ressearch brings our team of design</p></li>
+                        </ul>
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-6">
+                        <div class="step-image">
+                              <img src="/assets/images/cater/img.png" alt="" />
+                        </div>
+                  </div>
+            </div>
+      </div>
+</section>
+
+<section class="our-process">
+      <div class="container">
+            <div class="row">
+                  <div class="col-md-12">
+                        <h1>OUR PROCESS</h1>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-2">
+                        <div class="step-image">
+                              <img src="/assets/images/cater/process-1.svg" alt="" />
+                        </div>
+                        <h2>RESEARCH</h2>
+                        <p>We believe ressearch brings our team</p>
+                  </div>
+                  <div class="col-md-2">
+                        <div class="step-image">
+                              <img src="/assets/images/cater/process-2.svg" alt="" />
+                        </div>
+                        <h2>DEFINE</h2>
+                        <p>We believe ressearch brings our team</p>
+                  </div>
+                  <div class="col-md-2">
+                        <div class="step-image">
+                              <img src="/assets/images/cater/process-3.svg" alt="" />
+                        </div>
+                        <h2>STRATEGY</h2>
+                        <p>We believe ressearch brings our team</p>
+                  </div>
+                  <div class="col-md-2">
+                        <div class="step-image">
+                              <img src="/assets/images/cater/process-4.svg" alt="" />
+                        </div>
+                        <h2>DESIGN</h2>
+                        <p>We believe ressearch brings our team</p>
+                  </div>
+                  <div class="col-md-2">
+                        <div class="step-image">
+                              <img src="/assets/images/cater/process-5.svg" alt="" />
+                        </div>
+                        <h2>ITERATE</h2>
+                        <p>We believe ressearch brings our team</p>
+                  </div>
+                  <div class="col-md-1"></div>
+            </div>
+            <div class="row bttn">
+                  <div class="col-md-12">
+                        <div class="btn">Know More</div>
+                  </div>
+            </div>
+      </div>
+</section>
